# argparse-rosetta-rs

./: .gitignore  Cargo.toml  README.md  bench.py  format.py  rust-toolchain.toml  tests.sh
.github/: renovate.json5  settings.yml
.github/workflows/: audit.yml  ci.yml
docs/: tradeoffs.md
examples/argh-app/: Cargo.toml  app.rs
examples/argp-app/: Cargo.toml  app.rs
examples/bpaf-app/: Cargo.toml  app.rs
examples/bpaf_derive-app/: Cargo.toml  app.rs
examples/clap-app/: Cargo.toml  app.rs
examples/clap-minimal-app/: Cargo.toml  app.rs
examples/clap3-app/: Cargo.toml  app.rs
examples/clap_derive-app/: Cargo.toml  app.rs
examples/clap_derive-minimal-app/: Cargo.toml  app.rs
examples/clap_lex-app/: Cargo.toml  app.rs
examples/gumdrop-app/: Cargo.toml  app.rs
examples/lexopt-app/: Cargo.toml  app.rs
examples/null-app/: Cargo.toml  app.rs
examples/pico-args-app/: Cargo.toml  app.rs
examples/structopt-app/: Cargo.toml  app.rs
examples/xflags-app/: Cargo.toml  app.rs
runs/: 2021-07-21-epage-sc01.json  2021-07-22-epage-sc01.json  2021-10-23-seon.json  2021-12-08-seon.json  2021-12-31-seon.json  2022-03-15-seon.json  2022-03-16-elakelaiset.json  2022-04-15-seon.json  2022-06-13-seon.json  2022-09-02-seon.json  2022-09-27-seon.json  2022-09-28-seon.json  2023-03-23-seon.json  2023-03-28-seon.json  2023-08-24-seon.json  2024-08-22-pop-os.json  2026-03-09-bench.json
